# S7-engine-condition-calculator

./: README.md
app/: Dockerfile  Makefile  pyproject.toml
app/src/: main.py
r&d/: s7_catboost_splited.ipynb
